@@ -1,1 +1,1 @@
-0.40.1
+0.40.2
